--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     Hello World!, we are software developers!
-
+    <div>
+      <h1 id="title">Customer Service Survey Form</h1>
+      <p id="description">tell us about your customer experience with Mcdonalds filling in the following survey</p>
+    </div>
+    <div>
+      <form>
+        
+      </form>
+    </div>
     <!--
 
     Hello Camper!
