Added form with name and email inputs

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       <p id="description">tell us about your customer experience with Mcdonalds filling in the following survey</p>
     </div>
     <div>
-      <form>
-        
+      <form id="survey-form">
+        <input type="text" id="name"><br>
+        <input type="text" id="email"><br>
       </form>
     </div>
     <!--
