added email validation and phone number input

--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
     </div>
     <div>
       <form id="survey-form">
-        <input type="text" id="name"><br>
-        <input type="text" id="email"><br>
+        Name:
+        <input type="text" id="name" placeholder="write your name"><br>
+        Email:
+        <input type="email" id="email" placeholder="write your email"><br>
+        Phone number:
+        <input type="text" id="number" placeholder="write your phone number"><br>
+
       </form>
     </div>
     <!--
