Added type number and min and max attributes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         Email:
         <input type="email" id="email" placeholder="write your email"><br>
         Phone number:
-        <input type="text" id="number" placeholder="write your phone number"><br>
+        <input type="number" id="number" min="0" max="99" placeholder="Enter your age"><br>
 
       </form>
     </div>
