added id to input labels

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     </div>
     <div>
       <form id="survey-form">
-        Name:
+        <h4 id="name-label">Name:</h4>
         <input type="text" id="name" placeholder="write your name"><br>
-        Email:
+        <h4 id="email-label">Email:</h4>
         <input type="email" id="email" placeholder="write your email"><br>
-        Phone number:
+        <h4 id="number-label">Age:</h4>
         <input type="number" id="number" min="0" max="99" placeholder="Enter your age"><br>
 
       </form>
