Added dropdown menu and radio buttons

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
         <input type="email" id="email" placeholder="write your email"><br>
         <h4 id="number-label">Age:</h4>
         <input type="number" id="number" min="0" max="99" placeholder="Enter your age"><br>
+        <select id="dropdown">
+          <option value="mexico">Mexico</option>
+          <option value="guatemala">Guatemala</option>
+        </select>
+        <input type="radio" name="gender" value="male" checked><br>
+        <input type="radio" name="gender" value="female" checked><br>
+        <input type="radio" name="gender" value="other" checked><br>
 
       </form>
     </div>
