--- a/index.html
+++ b/index.html
@@ -9,28 +9,42 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     Hello World!, we are software developers!
+    <div class="responsive">
     <div>
       <h1 id="title">Customer Service Survey Form</h1>
       <p id="description">tell us about your customer experience with Mcdonalds filling in the following survey</p>
     </div>
     <div>
       <form id="survey-form">
-        <h4 id="name-label">Name:</h4>
-        <input type="text" id="name" placeholder="write your name"><br>
-        <h4 id="email-label">Email:</h4>
-        <input type="email" id="email" placeholder="write your email"><br>
-        <h4 id="number-label">Age:</h4>
-        <input type="number" id="number" min="0" max="99" placeholder="Enter your age"><br>
+        <label id="name-label">Name:</label>
+        <input type="text" id="name" placeholder="write your name" required><br>
+        <label id="email-label">Email:</label>
+        <input type="email" id="email" placeholder="write your email" required><br>
+        <label id="number-label">Age:</label>
+        <input type="number" id="number" min="0" max="99" placeholder="Enter your age"><br><br>
+        Country:<br>
         <select id="dropdown">
           <option value="mexico">Mexico</option>
           <option value="guatemala">Guatemala</option>
         </select>
-        <input type="radio" name="gender" value="male" checked><br>
-        <input type="radio" name="gender" value="female" checked><br>
-        <input type="radio" name="gender" value="other" checked><br>
+        <br><br>Gender:<br>
+        <input type="radio" name="gender" value="male" checked>male<br>
+        <input type="radio" name="gender" value="female" checked>female<br>
+        <input type="radio" name="gender" value="other" checked>other<br>
+        <br>
+        Income:<br>
+        <input type="checkbox" name="income1" value="less1000"> less than 1000/ year<br>
+        <input type="checkbox" name="income2" value="more1000"> more than 1000/year<br>
+        <br><br>
+        Enter additional comments:
+        <textarea rows="4" cols="50">
+        </textarea><br><br>
+        <input type="submit" value="send info" id="submit">
+
 
       </form>
     </div>
+  </div>
     <!--
 
     Hello Camper!
